--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "slate-react": "^0.10.0"
   },
   "scripts": {
-    "prepublish": "babel ./lib --out-dir ./dist",
-    "lint": "eslint ./lib ./website",
+    "prepublish": "babel ./src --out-dir ./dist",
+    "lint": "eslint ./src ./website",
     "test": "./node_modules/.bin/mocha ./tests/*.js --compilers js:babel-register --reporter=list",
     "build-website": "browserify ./website/main.js -o ./website/bundle.js -t [ babelify --presets [ es2015 react stage-0 ] ]",
     "serve-website": "http-server ./website/ -p 8080",
