--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "slate-react": "^0.10.0"
   },
   "scripts": {
-    "prepublish": "babel ./src --out-dir ./dist",
+    "build": "babel ./src --out-dir ./dist",
+    "prepublish": "npm run build",
     "lint": "eslint ./src ./website",
     "test": "./node_modules/.bin/mocha ./tests/all.js --compilers js:babel-register --reporter=list",
     "build-website": "browserify ./website/main.js -o ./website/bundle.js -t [ babelify --presets [ es2015 react stage-0 ] ]",
