--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slate-hyperprint",
+  "name": "@gitbook/slate-hyperprint",
   "description": "A Slate plugin to print Slate models to their slate-hyperscript representation.",
   "version": "2.2.6",
   "license": "Apache-2.0",
